--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -59,6 +59,14 @@
             <ul class="pcoded-submenu">
                 <li><a href="admin/listR" target="_blank">Consulter les messages </a></li>
             </ul>
+        </li>
+        <li class="nav-item pcoded-hasmenu">
+            <a href="blog" class="nav-link "><span>
+                <img src="/assets/icons/articl.png" class="icon"></span>
+               <span class="pcoded-mtext mx-2"> Articles</span></a>
+            <ul class="pcoded-submenu">
+                <li><a href="blog" target="_blank">Consulter les articles </a></li>
+            </ul>
         </li>	
     </ul>
 			</div>
