--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,6 +1,6 @@
 .hero-header {
     position: relative;
-    background: url('https://img.freepik.com/psd-premium/tampons-hygieniques-menstruels-tampons-fleur-rouge_114963-2204.jpg?w=900') top right no-repeat;
+    background: url('https://img.freepik.com/photos-gratuite/femmes-enceintes-concept-beaute-heureux-tendre-jolie-blonde-jeune-femme-femme-attend-enfant-tenir_1258-93657.jpg?w=1380&t=st=1684370829~exp=1684371429~hmac=41a27a368453e9ec7b5e4513fb3d831d6fee6ccd8b8cec219f34a222dac999ad') top right no-repeat;
     background-size: cover;
 }
 .ico {
