--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -40,12 +40,7 @@
                     <a href="/home" class="nav-item nav-link ">Accueil</a>
                     <a href="/about" class="nav-item nav-link">A Propos</a>
                     <a href="/service" class="nav-item nav-link">Services</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="/appointment" class="dropdown-item">Appointment</a>
-                        </div>
-                    </div>
+                    <a href="/appointment" class="nav-item nav-link">Appointment</a>
                     <a href="/contact" class="nav-item nav-link">Contact</a>
                     <a href="/login" class="nav-item nav-link">Se connecter</a>
                 </div>
