--- a/frontend/src/app/components/appointment/appointment.component.html
+++ b/frontend/src/app/components/appointment/appointment.component.html
@@ -1,7 +1,28 @@
 
 	<div id="booking" class="section">
 		<app-navbar ></app-navbar>
-		
+		<div class="row">
+			<div class="col-md-6">
+			  <div class="work-schedules">
+				<h2 class="section-title">Horaires d'ouvertures :</h2>
+				<div class="work-schedule">
+				  <i class="fas fa-clock b"></i>
+				  <div class="schedule-content">
+					<h3>Lundi - Vendredi</h3>
+					<p>8h30 - 16h00</p>
+				  </div>
+				</div>
+				<div class="work-schedule">
+				  <i class="fas fa-clock"></i>
+				  <div class="schedule-content">
+					<h3 >Samedi</h3>
+					<p>8h30 - 13h00</p>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  
 		<div class="section-center mt-5">
 			<div class="container mt-5">
 				<div class="row">
