--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,44 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login Page</title>
-	<link rel="stylesheet" href="login.component.css">
+  <title>Login Page</title>
+
 </head>
-<div class="example-container">
-  <mat-card class="box">
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <form class="example-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <mat-card-content class="example-card">
-         <mat-form-field>
-          <mat-label>userName</mat-label>
-          <input matInput placeholder="userName" formControlName="userName"
-          [ngClass]="{ 'is-invalid': submitted && f['userName'].errors }"
-          />
-          <div class="invalid-feedback" *ngIf="f['userName'].errors && submitted">
-            <div *ngIf="f['userName'].errors['required']">userName is required</div>
-            <div *ngIf="f['userName'].errors['userName']">
-              userName must be a valid userName address
-            </div>
-          </div>
-        </mat-form-field>
-        <mat-form-field >
-          <mat-label>Mot de passe</mat-label>
-          <input matInput  [type]="hide ? 'password' : 'text'" formControlName="password"
-          [ngClass]="{ 'is-invalid': submitted && f['password'].errors }"/>
-          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-          <div class="invalid-feedback" *ngIf="f['password'].errors && submitted">
-            <div *ngIf="f['password'].errors['required']">password is required</div>
-            </div>
-        </mat-form-field>
-      </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block"><span *ngIf="loading"></span>Se connecter</button>
-    </form>
-    <mat-card-footer>
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    </mat-card-footer>
-  </mat-card>
-</div>
+<body>
+  <div class="login-container">
+    <div class="login-box">
+      <h2 class="login-title">Login</h2>
+      <form class="login-form"  [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" name="username" formControlName="userName" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password"  formControlName="password" required>
+        </div>
+        <button type="submit" class="login-button"><span *ngIf="loading"></span>Login</button>
+      </form>
+    </div>
+  </div>
+</body>
+</html>
+
