--- a/frontend/src/app/components/carnet-edit/carnet-edit.component.html
+++ b/frontend/src/app/components/carnet-edit/carnet-edit.component.html
@@ -114,7 +114,7 @@
 </div>
 <div class="form-group">
   <button class="formbold-btn " type="submit">
-    Register
+    Modifier
   </button>
 </div>
 
