--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
 					<div class="main-menu-header">
 						<img class="img-radius" src="/assets/img/gyne.png" alt="User-Profile-Image">
 						<div class="user-details">
-							<div id="more-details" class="text-white">Docteur Nesrine Machat <app-profile></app-profile> <i class="fa fa-caret-down"></i>
+							<div id="more-details" class="text-white">Docteur Nesrine Machat <i class="fa fa-caret-down"></i>
                             </div>
 						</div>
 					</div>
@@ -108,10 +108,11 @@
                       
 						<li>
 							<div class="dropdown" id="logout">
-								<a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="icon feather icon-bell"></i></a>
+                                <img  class="ic mr-1"src="../../../../assets/icons/follower.png">
+								<a class="dropdown-toggle mr-5" href="#" data-toggle="dropdown"><app-profile></app-profile></a>
 								<div class="dropdown-menu dropdown-menu-right notification">
 									<div class="noti-head" >
-										<h6 class="d-inline-block m-b-0">Notifications</h6>
+										<h6 class="d-inline-block m-b-0"></h6>
 									</div>
 								</div>
 							</div>
@@ -124,9 +125,7 @@
 								</a>
 							</div>
 						</li>
-                        <li>
-                            
-                        </li>
+                       
 					</ul>
 				</div>
 				
