--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,9 +1,7 @@
 <div *ngIf="userProfile">
-  <h2>{{ userProfile.userName }}</h2>
-  <p>Role: {{ userProfile.role }}</p>
-  <!-- Display additional profile information as needed -->
-</div>
+  <p class="">{{ userProfile.userName }}</p>
 
+</div>
 <div *ngIf="error">
   <p>{{ error }}</p>
 </div>
