--- a/frontend/src/app/components/carnet-list/carnet-list.component.html
+++ b/frontend/src/app/components/carnet-list/carnet-list.component.html
@@ -90,17 +90,40 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
-          
+                      
           <li class="nav-item" id="logout">
             <a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
             <div class="search-bar">
               <input type="text" id="m-search" class="form-control"  
-              placeholder="Rechercher...">
+                              placeholder="Rechercher...">
               <button type="button" class="close" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
           </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+                    
+          <li>
+            <div class="dropdown" id="logout">
+                              <img  class="ic mr-1"src="../../../../assets/icons/follower.png">
+              <a class="dropdown-toggle mr-5" href="#" data-toggle="dropdown"><app-profile></app-profile></a>
+              <div class="dropdown-menu dropdown-menu-right notification">
+                <div class="noti-head" >
+                  <h6 class="d-inline-block m-b-0"></h6>
+                </div>
+              </div>
+            </div>
+          </li>&nbsp;&nbsp;&nbsp;
+          <li>
+            <div class="dropdown drp-user">
+              <a href="/login" (click)="logOut()" id="logout"
+                                   class="dropdown-toggle" data-toggle="dropdown">
+                <i class="feather icon-log-out"></i>
+              </a>
+            </div>
+          </li>
+                     
         </ul>
       </div>
       
