--- a/frontend/src/app/components/consultation/consultation.component.html
+++ b/frontend/src/app/components/consultation/consultation.component.html
@@ -79,59 +79,58 @@
 	</nav>
 	<!-- [ navigation menu ] end -->
 	<!-- [ Header ] start -->
-	<header class="navbar pcoded-header navbar-expand-lg navbar-light header-blue">
-		<div class="m-header">
-					<a class="mobile-menu" id="mobile-collapse" href="/admin/dashboard"><span></span></a>
-					<a href="#!" class="b-brand">
-						<!-- ========   change your logo hear   ============ -->
-						<img src="/assets/admin/images/logo-icon.png" alt="" class="logo-thumb">
-					</a>
-					<a href="#!" class="mob-toggler" >
-						<i class="feather icon-more-vertical"></i>
-					</a>
-				</div>
-				<div class="collapse navbar-collapse">
-					<ul class="navbar-nav mr-auto">
+  <header class="navbar pcoded-header navbar-expand-lg navbar-light header-blue">
+    <div class="m-header">
+          <a class="mobile-menu" id="mobile-collapse" href="/admin/dashboard"><span></span></a>
+          <a href="#!" class="b-brand">
+            <!-- ========   change your logo hear   ============ -->
+            <img src="/assets/admin/images/logo-icon.png" alt="" class="logo-thumb">
+          </a>
+          <a href="#!" class="mob-toggler" >
+            <i class="feather icon-more-vertical"></i>
+          </a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav mr-auto">
                         
-						<li class="nav-item" id="logout">
-							<a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
-							<div class="search-bar">
-								<input type="text" id="m-search" class="form-control"  
+            <li class="nav-item" id="logout">
+              <a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
+              <div class="search-bar">
+                <input type="text" id="m-search" class="form-control"  
                                 placeholder="Rechercher...">
-								<button type="button" class="close" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-						</li>
-					</ul>
-					<ul class="navbar-nav ml-auto">
+                <button type="button" class="close" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
                       
-						<li>
-							<div class="dropdown" id="logout">
-								<a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="icon feather icon-bell"></i></a>
-								<div class="dropdown-menu dropdown-menu-right notification">
-									<div class="noti-head" >
-										<h6 class="d-inline-block m-b-0">Notifications</h6>
-									</div>
-								</div>
-							</div>
-						</li>&nbsp;&nbsp;&nbsp;
-						<li>
-							<div class="dropdown drp-user">
-								<a href="/login" (click)="logOut()" id="logout"
+            <li>
+              <div class="dropdown" id="logout">
+                                <img  class="ic mr-1"src="../../../../assets/icons/follower.png">
+                <a class="dropdown-toggle mr-5" href="#" data-toggle="dropdown"><app-profile></app-profile></a>
+                <div class="dropdown-menu dropdown-menu-right notification">
+                  <div class="noti-head" >
+                    <h6 class="d-inline-block m-b-0"></h6>
+                  </div>
+                </div>
+              </div>
+            </li>&nbsp;&nbsp;&nbsp;
+            <li>
+              <div class="dropdown drp-user">
+                <a href="/login"  (click)="logOut()"  id="logout"
                                      class="dropdown-toggle" data-toggle="dropdown">
-									<i class="feather icon-log-out"></i>
-								</a>
-							</div>
-						</li>
-                        <li>
-                            
-                        </li>
-					</ul>
-				</div>
-				
-			
-	</header>
+                  <i class="feather icon-log-out"></i>
+                </a>
+              </div>
+            </li>
+                       
+          </ul>
+        </div>
+        
+      
+  </header>
 	<!-- [ Header ] end -->
 <!-- [ Main Content ] start -->
 <section class="pcoded-main-container">
@@ -154,7 +153,7 @@
         </div>
       </div>
   
-      <div class="container-fluid px-1 py-5 mx-auto">
+      <div class="container-fluid px-1 py-5 mx-auto ">
         <div class="row d-flex justify-content-center">
           <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
             <div class="card">
@@ -162,18 +161,23 @@
                 <h1> Consultation pour {{patient.nomP}} {{patient.prenomP}}</h1> 
 
                 <div class="row justify-content-between text-left">
+                  <input type="text" id="nom" name="nom" placeholder="Enter your first nom" formControlName="nom" style="  display: none;">
                     <div class="form-group col-sm-6 flex-column d-flex">
-                      <input type="text" id="nom" name="nom" placeholder="Enter your first nom" formControlName="nom" style="  display: none;">
                       <label class="form-control-label px-3">Annexe<span class="text-danger"> *</span></label>
-                      <input type="file" id="annexe" name="annexe"  formControlName="annexe">
+                      <input type="file" class="form-control-file" id="photo" (change)="onFileChange($event)"  formControlName="annexe">
                     </div>
                     <div class="form-group col-sm-6 flex-column d-flex">
                       <label class="form-control-label px-3">Date de consultation<span class="text-danger"> *</span></label>
-                     <input type="date" id="lname" name="lname" placeholder="Enter your last name" formControlName="timing">
+                     <input type="date" id="lname" name="lname" placeholder="Enter your last name" formControlName="timing"> <div *ngIf="submitted && myForm['timing'].errors" class="error-message text-danger">
+                      Date is required
+                    </div>
                     </div>
                   </div>
                   <label class="form-control-label px-3">Compte rendu de consultation<span class="text-danger"> *</span></label>
                   <textarea class="form-control form-control-alternative" rows="3" placeholder="Write a large text here ..." formControlName="conclusion"></textarea>
+                  <div *ngIf="submitted && myForm['conclusion'].errors" class="error-message text-danger">
+                    conclusion is required
+                  </div>
                 <div class="form-group">
                   <button class="formbold-btn" type="submit">Register</button>
                 </div>
