--- a/frontend/src/app/components/docteur/add-eco/add-eco.component.html
+++ b/frontend/src/app/components/docteur/add-eco/add-eco.component.html
@@ -99,34 +99,57 @@
       <!-- [ navigation menu ] end -->
       <!-- [ Header ] start -->
       <header class="navbar pcoded-header navbar-expand-lg navbar-light header-blue">
-          <div class="m-header">
-                      <a class="mobile-menu" id="mobile-collapse" href="/admin/dashboard"><span></span></a>
-                      <a href="#!" class="b-brand">
-                          <!-- ========   change your logo hear   ============ -->
-                          <img src="/assets/admin/images/logo-icon.png" alt="" class="logo-thumb">
-                      </a>
-                      <a href="#!" class="mob-toggler" >
-                          <i class="feather icon-more-vertical"></i>
-                      </a>
-                  </div>
-                  <div class="collapse navbar-collapse">
-                      <ul class="navbar-nav mr-auto">
-                          
-                          <li class="nav-item" id="logout">
-                              <a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
-                              <div class="search-bar">
-                                  <input type="text" id="m-search" class="form-control"  
-                                  placeholder="Rechercher...">
-                                  <button type="button" class="close" aria-label="Close">
-                                      <span aria-hidden="true">&times;</span>
-                                  </button>
-                              </div>
-                          </li>
-                      </ul>
-                  </div>
-                  
-              
-      </header>
+		<div class="m-header">
+					<a class="mobile-menu" id="mobile-collapse" href="/admin/dashboard"><span></span></a>
+					<a href="#!" class="b-brand">
+						<!-- ========   change your logo hear   ============ -->
+						<img src="/assets/admin/images/logo-icon.png" alt="" class="logo-thumb">
+					</a>
+					<a href="#!" class="mob-toggler" >
+						<i class="feather icon-more-vertical"></i>
+					</a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav mr-auto">
+                        
+						<li class="nav-item" id="logout">
+							<a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
+							<div class="search-bar">
+								<input type="text" id="m-search" class="form-control"  
+                                placeholder="Rechercher...">
+								<button type="button" class="close" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</li>
+					</ul>
+					<ul class="navbar-nav ml-auto">
+                      
+						<li>
+							<div class="dropdown" id="logout">
+                                <img  class="ic mr-1"src="../../../../assets/icons/follower.png">
+								<a class="dropdown-toggle mr-5" href="#" data-toggle="dropdown"><app-profile></app-profile></a>
+								<div class="dropdown-menu dropdown-menu-right notification">
+									<div class="noti-head" >
+										<h6 class="d-inline-block m-b-0"></h6>
+									</div>
+								</div>
+							</div>
+						</li>&nbsp;&nbsp;&nbsp;
+						<li>
+							<div class="dropdown drp-user">
+								<a href="/login" (click)="logOut()" id="logout"
+                                     class="dropdown-toggle" data-toggle="dropdown">
+									<i class="feather icon-log-out"></i>
+								</a>
+							</div>
+						</li>
+                       
+					</ul>
+				</div>
+				
+			
+	</header>
       <!-- [ Header ] end -->
 <!-- [ Main Content ] start -->
 <section class="pcoded-main-container">
@@ -176,25 +199,8 @@
                             <input type="file" class="form-control-file" id="dicom" (change)="onFileSelected($event, ecoItem)">
                           </div>
                       <button type="submit" class="btn btn-primary mr-1">Save</button>
-                      <button type="button" class="btn btn-primary" *ngIf="isEditMode" (click)="onCancel()">Cancel</button>
                     </form>
                     <hr>
-                    <div class="row">
-                      <h1>Liste des echographies</h1>
-                      
-                      <div class="col-md-6 mb-3" *ngFor="let ecoItem of eco">
-                        <div class="card">
-                          <div class="card-body"> 
-                            <canvas id="dicomCanvas" width="512" height="512"> {{ ecoItem.dicom }}</canvas>
-                            <h5 class="card-title">{{ ecoItem.title }}</h5>
-                            <p class="card-text">{{ ecoItem.description }}</p>
-                            <p class="card-text">{{ ecoItem.content }}</p>
-                            <canvas id="dicomCanvas" width="512" height="512"></canvas>
-                            <button type="button" class="btn btn-primary mr-1" (click)="onEdit(ecoItem)">Edit</button>
-                            <button type="button" class="btn btn-danger" (click)="onDelete(ecoItem)">Delete</button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                    
                   </div>
                   
