--- a/frontend/src/app/components/denied/denied.component.html
+++ b/frontend/src/app/components/denied/denied.component.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Access Denied</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
-      text-align: center;
-    }
-    
-    h1 {
-      margin-top: 100px;
-      font-size: 24px;
-    }
-    
-    p {
-      margin-top: 20px;
-      font-size: 16px;
-    }
-  </style>
-</head>
+<html lang="fr">
+
 <body>
-  <h1>Access Denied</h1>
-  <p>This page can only be viewed by doctors.</p>
+
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>Oups!</h1>
+			</div>
+			<h2>Accès Interdit</h2>
+      <p>La page que vous recherchez est interdite à certains utilisateurs.</p>
+  			<p>Cette page est réservée seulement pour la docteure <strong> Dr. Machat Nesrine</strong> .</p>
+			<a href="/admin/dashboard">Retourner à la page d'accueil</a>
+		</div>
+	</div>
+
 </body>
+
 </html>
