--- a/frontend/src/app/components/docteur/list-patientes/list-patientes.component.html
+++ b/frontend/src/app/components/docteur/list-patientes/list-patientes.component.html
@@ -164,7 +164,7 @@
 				<table class="table align-middle mb-0 text-center table-responsive-lg" style="overflow-x:auto;">
 				   <thead class="bg countour border text-bold">
 					 <tr>
-					   <th>ID</th>
+					   <th>userName</th>
 					   <th>Nom</th>
 					   <th>Prénom</th>
 					   <th>Date de naissance</th>
