--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -52,7 +52,7 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <li><a class="dropdown-item" href="/login" (click)="logOut()" >Déconnexion</a></li>
-                <li><a class="dropdown-item" routerLink="/changepass/"> Changer le mot de passe</a></li>
+                <li><a class="dropdown-item"  *ngIf="isPatient()" routerLink="/changepass/{{userProfile._id}}"> Changer le mot de passe</a></li>
               </ul>
             </div>
             <div class="nav-item dropdown" *ngIf="!userProfile">
