--- a/frontend/src/app/components/carnet-list/carnet-list.component.html
+++ b/frontend/src/app/components/carnet-list/carnet-list.component.html
@@ -316,15 +316,15 @@
                     <p>{{carnet.autre_vaccin}}</p>
                   </div>
                   <div class="card-field">
-                    <span class="label">Nom de la mère:</span>
+                    <span class="label">Nom de la medcin:</span>
                     <p>{{carnet.nomM}}</p>
                   </div>
                   <div class="card-field">
-                    <span class="label">Prénom de la mère:</span>
+                    <span class="label">Prénom de la medcin:</span>
                     <p>{{carnet.prenomM}}</p>
                   </div>
                   <div class="card-field">
-                    <span class="label">Téléphone de la mère:</span>
+                    <span class="label">Téléphone de la medcin:</span>
                     <p>{{carnet.telM}}</p>
                   </div>
                 </div>
