--- a/frontend/src/app/components/consultation/consultation.component.html
+++ b/frontend/src/app/components/consultation/consultation.component.html
@@ -179,7 +179,7 @@
                     conclusion is required
                   </div>
                 <div class="form-group">
-                  <button class="formbold-btn" type="submit">Register</button>
+                  <button class="formbold-btn" type="submit" routerLink="/admin/listP">Register</button>
                 </div>
               </form>
             </div>
